Change Content-Disposition header to allow inline display of requested files. Add domain name to links in output.json. Revert stupid modifications from last commit.

--- a/src/CDG-Server/Usage/Example-usage-Python.ipynb
+++ b/src/CDG-Server/Usage/Example-usage-Python.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "example_element = response.json()['Assets'][REQUESTED_FILE_NAME]\n",
     "\n",
-    "second_response = requests.get(REST_URL + example_element)\n",
+    "second_response = requests.get(example_element)\n",
     "\n",
     "if second_response.status_code != 200:\n",
     "    print(\"Error: received bad response code.\")\n",
