--- a/src/CDGeB1/Datasets/API-Client.ipynb
+++ b/src/CDGeB1/Datasets/API-Client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -161,12 +161,13 @@
      "output_type": "stream",
      "text": [
       "start: DS-F4 DS-F4\n",
-      "http://127.0.0.1:5000/GetFile/tmplm9vmf8c/output/results.txt\n"
+      "http://127.0.0.1:5000/GetFile/tmp31nnw3q9/output/results.txt\n"
      ]
     }
    ],
    "source": [
     "OUTPUT_PATH = \"out/tmp\"\n",
+    "# method = \"optimizer\"\n",
     "method = \"subtraction\"\n",
     "\n",
     "use_api(dataset_1p=\"DS-F4\", dataset_3p=\"DS-F4\", method=method)\n"
