Add documentation (future work, etc.).

--- a/Usage/Deprecated/Example-usage-Python.ipynb
+++ b/Usage/Deprecated/Example-usage-Python.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "\n",
     "# Other constants\n",
-    "REST_URL = \"https://cdgeo.net\"\n",
+    "REST_URL = \"https://127.0.0.1:5000\"\n",
     "\n",
     "FILE_MEASUREMENTS = os.path.join(DATASET, \"measurements.csv\")\n",
     "FILE_SERVERS = os.path.join(DATASET, \"servers.csv\")\n",
