Rename Fingerprinting method.

--- a/Usage/API-Client.ipynb
+++ b/Usage/API-Client.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "rtt_method = \"Optimization\"  # rtt_method = \"Subtraction\", \"Optimization\"\n",
-    "geolocation_method = \"Multilateration\"  # geolocation_method = \"Multilateration\", \"Profiling\"\n",
+    "geolocation_method = \"Multilateration\"  # geolocation_method = \"Multilateration\", \"Fingerprinting\"\n",
     "OUTPUT_PATH = \"./api-client-out/temp\"  # make sure this directory exists\n",
     "use_api(dataset_1p=\"DS-F3\", dataset_3p=\"DS-F4\", rtt_method=rtt_method, geolocation_method=geolocation_method)\n"
    ]
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "rtt_method = \"Optimization\"  # rtt_method = \"Subtraction\", \"Optimization\"\n",
-    "geolocation_method = \"Profiling\"  # geolocation_method = \"Multilateration\", \"Profiling\"\n",
+    "geolocation_method = \"Fingerprinting\"  # geolocation_method = \"Multilateration\", \"Fingerprinting\"\n",
     "OUTPUT_PATH = f\"api-client-out/{rtt_method}_{geolocation_method}\"  # make sure this directory exists\n",
     "\n",
     "DATASETS = [\"DS-F1\", \"DS-F2\", \"DS-F3\", \"DS-F4\", ]  # \"DS-B1\"\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
     "import time \n",
     "\n",
     "rtt_method = \"Optimization\"  # rtt_method = \"Subtraction\", \"Optimization\"\n",
-    "geolocation_method = \"Multilateration\"  # geolocation_method = \"Multilateration\", \"Profiling\"\n",
+    "geolocation_method = \"Multilateration\"  # geolocation_method = \"Multilateration\", \"Fingerprinting\"\n",
     "OUTPUT_PATH = \"./api-client-out/temp\"  # make sure this directory exists\n",
     "\n",
     "\n",
@@ -301,7 +301,7 @@
     "    combinations = list(product(*[datacenters[continent] for continent in continents]))\n",
     "    results = {}\n",
     "    for rtt_method in [\"Subtraction\"]:\n",
-    "        for geolocation_method in [\"Profiling\"]:\n",
+    "        for geolocation_method in [\"Fingerprinting\"]:\n",
     "            total_combinations = 0\n",
     "            total_mean_error = 0\n",
     "            total_max_error = 0\n",
@@ -350,7 +350,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "rtt_method = \"Subtraction\"  # rtt_method = \"Subtraction\", \"Optimization\"\n",
-    "geolocation_method = \"Profiling\"  # geolocation_method = \"Multilateration\", \"Profiling\"\n",
+    "geolocation_method = \"Fingerprinting\"  # geolocation_method = \"Multilateration\", \"Fingerprinting\"\n",
     "OUTPUT_PATH = \"./api-client-out/temp\"  # make sure this directory exists\n",
     "\n",
     "\n",
@@ -452,9 +452,36 @@
     "            writer.writerow([rtt_method, geolocation_method, n, mean_error, max_error, RMSE, success])\n",
     "\n",
     "\n",
-    "results = changing_number_of_frontend(dataset_1p=\"DS-F4\", dataset_3p=\"DS-F3\")\n",
-    "save_results_to_csv(results, \"results.csv\")\n",
-    "print(results)\n",
+    "dataset_1p=\"DS-F3\"\n",
+    "dataset_3p=\"DS-F4\"\n",
+    "results = changing_number_of_frontend(dataset_1p, dataset_3p)\n",
+    "save_results_to_csv(results, f\"output/results_{dataset_1p}_{dataset_3p}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create plots\n",
+    "\n",
+    "\n",
+    "def load_results_from_csv(filename):\n",
+    "    results = {}\n",
+    "    with open(filename, mode='r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        next(reader)  # skip the header\n",
+    "        for row in reader:\n",
+    "            rtt_method, geolocation_method, n, mean_error, max_error, RMSE, success = row\n",
+    "            success = eval(success)  # convert string representation of list to actual list\n",
+    "            results.update({(rtt_method, geolocation_method, int(n)): [float(mean_error), float(max_error), float(RMSE), success]})\n",
+    "    return results\n",
+    "\n",
+    "dataset_1p=\"DS-F2\"\n",
+    "dataset_3p=\"DS-F1\"\n",
+    "results = load_results_from_csv(f\"output/results_{dataset_1p}_{dataset_3p}.csv\")\n",
+    "\n",
     "n_values = []\n",
     "mean_errors = []\n",
     "max_errors = []\n",
@@ -479,10 +506,10 @@
     "\n",
     "# Add labels and title\n",
     "plt.legend()\n",
-    "plt.xlabel('Number of Frontend Servers')\n",
-    "plt.ylabel('Error [km]')\n",
+    "plt.title('Average Errors vs. Number of Front-end Servers', fontsize=24)\n",
+    "plt.xlabel('Number of Front-end Servers', fontsize=22)\n",
+    "plt.ylabel('Error [km]', fontsize=22)\n",
     "plt.xticks(n_values)\n",
-    "plt.title('Average Errors vs. Number of Frontend Servers')\n",
     "plt.grid(True)\n",
     "\n",
     "# Display the plot\n",
@@ -493,10 +520,10 @@
     "plt.plot(n_values, successes, marker='o', linestyle='-', label = \"Average success\")\n",
     "\n",
     "# Add labels and title\n",
-    "plt.xlabel('Number of Frontend Servers')\n",
-    "plt.ylabel('Average Success Rate')\n",
+    "plt.title('Average Success Rate vs. Number of Front-end Servers', fontsize=24)\n",
+    "plt.xlabel('Number of Front-end Servers', fontsize=22)\n",
+    "plt.ylabel('Average Success Rate', fontsize=22)\n",
     "plt.xticks(n_values)\n",
-    "plt.title('Average Success Rate vs. Number of Frontend Servers')\n",
     "plt.grid(True)\n",
     "\n",
     "# Display the plot\n",
@@ -506,7 +533,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
